syntax="proto3";
import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

option go_package="./proto;consumer";

package proto;

message HealthCheckRequest {
  string service = 1;
}

message HealthCheckResponse {
  enum ServingStatus {
    UNKNOWN = 0;
    SERVING = 1;
    NOT_SERVING = 2;
    SERVICE_UNKNOWN = 3;  // Used only by the Watch method.
  }
  ServingStatus status = 1;
}

service ConsumerService {
  rpc VerifyUser(VerifyUserRequest) returns (VerifyUserResponse);
  rpc Check(google.protobuf.Empty) returns (HealthCheckResponse) {
    option (google.api.http) = {
      get: "/consumer/health",
    };
  };

  rpc Watch(HealthCheckRequest) returns (stream HealthCheckResponse);
}

message VerifyUserRequest {
  string id = 1;
}

message VerifyUserResponse {
  bool is_ok = 1;
}